[package]
name = "scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scan_lib"
path = "src/lib.rs"

[[bin]]
name = "scan_bin"
path = "src/bin.rs"

[dependencies]
text_io = "0.1.12"
itertools = "0.12.0"
lazy_static = "1.4.0"
